--- a/java-backend/pom.xml
+++ b/java-backend/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>ppmtool</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ppmtool</name>
-    <description>Personal Project Management Tool</description>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -48,6 +48,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.1.5.RELEASE</version>
         </dependency>
     </dependencies>
 
